ironic comic sans doesn't work on Safari; fix with fallbacks

--- a/app/assets/stylesheets/23-pub-quiz/pub-quiz.scss
+++ b/app/assets/stylesheets/23-pub-quiz/pub-quiz.scss
@@ -66,5 +66,5 @@
 
 .comic-sans {
   font-family: sans-serif;
-  font-family: 'Comic Sans MS';
+  font-family: 'Comic Sans MS', 'Marker Felt', sans-serif;
 }
